--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,36 @@
-.nav {
-    color: white;
-    float: middle;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+}
+.logo {
+    font-size: 24px;
+    
+}
+.nav-links {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.nav-links li {
+    margin: 0 15px;
+}
+
+.nav-links li a {
+    color: black;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 10px 15px;
     display: block;
-    text-align: center;
+    transition: background-color 0.3s ease;
 }
