--- a/Messages/messagesheet.css
+++ b/Messages/messagesheet.css
@@ -4,11 +4,42 @@
     font-family: 'Roboto', sans-serif;
 }
 .container {
+    display: flex;
     width: 80%;
-    margin: auto;
-    margin-top: 2rem;
-    letter-spacing: 0.5px;
-    height: 80%;
+    max-width: 900px;
+}
+.user-list {
+    width: 200px;
+    background-color: #f9f9f9;
+    padding: 15px;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.user-list h3 {
+    margin-top: 0;
+}
+
+.user-list ul {
+    list-style: none;
+    padding: 0;
+}
+.user-list li {
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+.chat-container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 8px;
+    padding: 15px;
+    border: 1px solid #ccc;
 }
 
 img {
@@ -91,6 +122,7 @@ img {
     flex-wrap: wrap;
     align-items: stretch;
 }
+
 .input-group>.form-control {
     position: relative;
     flex: 1 1 auto;
@@ -154,19 +186,20 @@ received-chats-img {
     vertical-align: top;
     width: 92%;
 }
+
 .received-msg-inbox {
     width: 57%;
 }
 
 .received-msg-inbox p {
-    background: #efefef none repeat scroll 0 0;
+    background: #ECE0F5;
     border-radius: 10px;
-    color: #646464;
+    color: #000;
     font-size: 14px;
     margin-left: 1rem;
     padding: 1rem;
     width: 100%;
-    box-shadow: rgb(0 0 0 / 25%) 0px 5px 5px 2px;
+    
 }
     p {
     overflow-wrap: break-word;
@@ -191,7 +224,6 @@ received-chats-img {
     padding: 5px 10px 5px 12px;
     width: 100%;
     padding: 1rem;
-    box-shadow: rgb(0 0 0 / 25%) 0px 2px 5px 2px;
 }
 .outgoing-chats-msg {
         float: right;
