--- a/Journal/journalStylesheet.css
+++ b/Journal/journalStylesheet.css
@@ -1,14 +1,22 @@
+body, .text, p {
+    font-family: 'Poppins', sans-serif;
+}
+
+h1, h2 {
+    font-family: 'Manrope', sans-serif;
+}
+
 .rectangle-container {
-    background-color: pink;
+    background-image: url('../images/JournalBackgroundImage.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     width: 100vw;
     height: 40rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 20px;
     margin: 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .bunny-image {
@@ -17,12 +25,11 @@
 }
 
 .rectangle-content {
-    font-family: Arial, sans-serif;
     font-size: 24px;
-    color: #333;
+    color: black;
     text-align: left;
     flex: 1;
-    padding-left: 20px;
+    margin-left: 10%;
 }
 
 .icon-description {
@@ -42,16 +49,17 @@
     display: flex;
     flex-direction: column;
     font-size: 16px;
+    margin-left: 1rem;
 }
 
 .icon-description .text h2 {
     font-size: 18px;
-    color: #333;
+    color: black;
     margin: 0;
 }
 
 .icon-description .text p {
     font-size: 14px;
-    color: #666;
-    margin: 0.25rem 0 0;
+    color: black;
+    margin: 0.5rem 0 0;
 }
