--- a/Profile/profileStylesheet.css
+++ b/Profile/profileStylesheet.css
@@ -63,3 +63,23 @@ h1, h2 {
     color: black;
     margin: 0.5rem 0 0;
 }
+
+.section {
+    font-size: 24px;
+    color: black;
+    text-align: left;
+    flex: 1;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#editButton {
+    font-size: 15px;
+    outline: none;
+    color: white;
+    background: #F4C8D9;
+    width: 6rem;
+    height: 3rem;
+    border-radius: 20px;
+    border: none;
+}
