--- a/Messages/messagesheet2.css
+++ b/Messages/messagesheet2.css
@@ -2,26 +2,29 @@ body, .text, p {
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: white;
+}
+
 h1, h2 {
     font-family: 'Manrope', sans-serif;
+    font-weight: 600;
 }
 
 .rectangle-container {
-    background-image: url('../images/JournalBackgroundImage.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background: linear-gradient(to bottom, #BEB8F4, #F9E0E9);
     width: 100vw;
     height: 40rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 20px;
     margin: 0;
 }
 
 .bunny-image {
     height: 40rem;
-    margin-left: 10%;
+    margin-right: 20%;
 }
 
 .rectangle-content {
@@ -29,37 +32,31 @@ h1, h2 {
     color: black;
     text-align: left;
     flex: 1;
-    margin-left: 10%;
+    margin-left: 20%;
 }
 
-.icon-description {
+.description {
     display: flex;
     align-items: center;
     gap: 1rem;
     margin-bottom: 1rem;
 }
 
-.growth-icon,
-.burnout-icon {
-    width: 50px;
-    height: auto;
-}
-
-.icon-description .text {
+.description .text {
     display: flex;
     flex-direction: column;
     font-size: 16px;
     margin-left: 1rem;
 }
 
-.icon-description .text h2 {
+.description .text {
     font-size: 18px;
     color: black;
     margin: 0;
 }
 
-.icon-description .text p {
+.description .text p {
     font-size: 14px;
     color: black;
-    margin: 0.5rem 0 0;
+    margin: 0.7rem 0 0;
 }
