--- a/Profile/profileStylesheet.css
+++ b/Profile/profileStylesheet.css
@@ -48,6 +48,7 @@ h1, h2 {
 .icon-description .text {
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-size: 16px;
     margin-left: 1rem;
 }
