--- a/Profile/profileStylesheet.css
+++ b/Profile/profileStylesheet.css
@@ -25,6 +25,8 @@ h1, h2 {
 }
 
 .rectangle-content {
+    display: flex;
+    flex-direction: column;
     font-size: 24px;
     color: black;
     text-align: left;
@@ -48,9 +50,8 @@ h1, h2 {
 .icon-description .text {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: normal;
     font-size: 16px;
-    margin-left: 1rem;
 }
 
 .icon-description .text h2 {
@@ -75,6 +76,7 @@ h1, h2 {
 }
 
 .editButton {
+    margin-top: 20px; 
     font-size: 15px;
     outline: none;
     color: white;
@@ -82,5 +84,9 @@ h1, h2 {
     width: 6rem;
     height: 3rem;
     border-radius: 20px;
+    border: none;
+}
+
+.trait {
     border: none;
 }
